# UAP-ML

./: README.md  UAP_Machine_Learning.ipynb  pyproject.toml
src/: ae_history.npy  ae_reg.pth  autoencoder.pth  dashboard.py  ft_history.npy  lstm.pth  lstm_history.npy  mlp_multi.pth  mlp_multi_history.npy  mlp_single.pth  mlp_single_history.npy  scaler.pkl  simple_ft.pth
